Completed Issue #8 ~ Uses body[data-env] to distinguish between environments (src or dist) ~ Grunt concats all tpls into single file with each wrapped in div[data-tpl]=filename.tpl ~ Used deffered to replicate/proxy .done() method for nodedit.template when pulled from DOM (muchos gracias to Luiz Lopes @theprivileges )

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -202,6 +202,10 @@ table label, table input, table select {
     height: 100%;
 }
 
+#nodedit-templates {
+    display: none;
+}
+
 /* CONNECT */
 
 #connect {
